--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,6 @@ jobs:
       - name: Test with pytest
         run: |
           pytest
+      - uses: pyupio/safety@2.3.5
+        with:
+          api-key: ${{ secrets.SAFETY_API_KEY }}
